--- a/app/page.module.css
+++ b/app/page.module.css
@@ -73,3 +73,26 @@
     margin: 2rem auto;
     text-align: center;
   }
+
+@media screen and (max-width:700px) {
+  .header{
+    display: flex;
+    gap: 0;
+    margin: 0 auto;
+    flex-direction: column;
+    width: 100%;
+  }
+  .slideshow {
+    width: 100%;
+    height: 25rem;
+  }
+  .cta {
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+  }
+  .hero{ 
+    text-align: center;
+  }
+}
