--- a/components/main-header/main-header-background.module.css
+++ b/components/main-header/main-header-background.module.css
@@ -12,3 +12,14 @@
     width: 100%;
     height: auto;
   }
+
+  @media screen and (max-width: 700px){
+    .header-background {
+      position: absolute;
+      width: 100%;
+      height: 120px;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    } 
+  }
