--- a/components/main-header/main-header.module.css
+++ b/components/main-header/main-header.module.css
@@ -43,3 +43,46 @@
     object-fit: contain;
     filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.5));
   }
+
+  .backdrop{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 50px;
+  }
+
+  .line{
+    width: 100px;
+    height: 1px;
+    color: black;
+  }
+@media screen and (max-width: 700px){
+  .nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: none;
+    /* font-family: 'Montserrat', sans-serif; */
+    font-size: 1.25rem;
+  }
+  
+  .logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: #ddd6cb;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    font-size: 1rem;
+  }
+  
+  .logo img {
+    width: 3rem;
+    height: 3rem;
+    object-fit: contain;
+    filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.5));
+  }
+}
