--- a/components/main-header/nav-link.module.css
+++ b/components/main-header/nav-link.module.css
@@ -1,6 +1,7 @@
 .link {
   text-decoration: none;
   color: #ddd6cb;
+  text-align: center;
   font-weight: bold;
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
